src/hhccia/hhccia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhccia-front
  namespace: hhccia
  labels:
    app: hhccia-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hhccia-front
  template:
    metadata:
      labels:
        app: hhccia-front
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: github-auth
      containers:
        - name: hhccia-front
          image: ghcr.io/irupe-consultores/hhccia-front:latest
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: hhccia-front
  namespace: hhccia
  labels:
    app: hhccia-front
spec:
  selector:
    app: hhccia-front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
