src/hhccia/hhccia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhccia-ingress
  namespace: hhccia
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "hhccia.cjbarroso.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhccia-front
                port:
                  number: 8080
